# Rust-Advanced-Learning

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  entrypoint.sh
migrations/2026-02-14-045106-0000_create_rustaceans/: up.sql
migrations/2026-02-14-045114-0000_create_crates/: up.sql
migrations/2026-02-26-154222-0000_create_users_and_roles/: up.sql
src/: commands.rs  lib.rs  main.rs  models.rs  repositories.rs  schema.rs
src/rocket_routes/: crates.rs  mod.rs  rustaceans.rs
tests/: crates.rs  rustaceans.rs
tests/common/: mod.rs
